Implement endpoint to update an account
